@@ -1,5 +1,12 @@
 2009-01-06  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/tutorial/cluttermm-tut.xml: Correct the base URLs for the 
+	(not ideal) reference documentation for cluttermm and clutter-gtkmm.
+	* examples/full_example/main.cc: Replaced some g_print()s with 
+	std::cout.
+
+2009-01-06  Murray Cumming  <murrayc@murrayc.com>
+
 	* examples/: Mostly whitespace changes to be more like the gtkmm 
 	examples.
 
